      correctly.
    - debian/post{inst,rm}: removed, debhelper takes care of this.
    - debian/control:
        * Update of Maintainer, Standards-Version, Uploaders
        * Building ruby modules now (Closes: #453304).
        * Change the Python binary package to conform with the Python policy,
          using python-support.
        * Bump Standards Version to 3.7.3

 -- Bernd Zeimetz <bzed@debian.org>  Wed, 06 Feb 2008 17:24:40 +0100

rrdtool (1.2.19-1) unstable; urgency=low

  * New maintainer (closes: #409518).
  * New upstream release:
    - Logarithmic graphs don't consume all available memory (closes: #402782).
    - This version at least does no longer have such rrdexplorer example
      (closes: #239565).
    - Patch for PREV(cname) was included long ago (closes: #160485).
    - I am no longer able to reproduce a segfault with PREV(name).  Closes:
      #180284.
  * Acknowledge NMU uploads (closes: #323975, #324497, #326653, #373379,
    #323771, #325708, #323611, #240369, #323969).
  * bindings/python/Makefile.in: Added -lpython2.4 in order to fix build
    failure.

 -- David Martínez Moreno <ender@debian.org>  Mon, 12 Feb 2007 02:18:22 +0100

rrdtool (1.2.15-0.3) unstable; urgency=high

  * Non-maintainer upload.
  * Fix high memory consumption by extracting r881 und r887 from upstream.
    Closes: #397691, #398111

 -- Andreas Barth <aba@not.so.argh.org>  Thu, 14 Dec 2006 18:25:02 +0000

rrdtool (1.2.15-0.2) unstable; urgency=low

  * Non-maintainer upload.
  * Fixed the python module based on the patch supplied by Brian Warner,
    thank you, closes: #397781.
  * Updated upstream URL in the copyright file.

 -- Josip Rodin <joy-packages@debian.org>  Mon, 27 Nov 2006 00:25:41 +0100

rrdtool (1.2.15-0.1) unstable; urgency=low

  * Non-maintainer upload.
  * New upstream version, closes: #364948.
    + Dropped our patches for #323771, it's now fixed upstream.
    + Seems to fix the crashes in RRDs::graph, closes: #392937.